--- a/Remote Work Impact.ipynb
+++ b/Remote Work Impact.ipynb
@@ -10,7 +10,53 @@
     "import pandas as pd\n",
     "import sklearn.datasets as dta\n",
     "import scipy.stats as st\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load environment variables from the .env file\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Retrieve API keys from environment variables\n",
+    "api_key = os.getenv(\"YOUR_API_KEY_ENV_VARIABLE\")\n",
+    "api_key = os.getenv(\"YOUR_API_KEY_ENV_VARIABLE\")\n",
+    "\n",
+    "# Ensure you replace \"YOUR_API_KEY_ENV_VARIABLE\" with the actual name of the env variable that stores your API key.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define API URL and parameters\n",
+    "api_url = \"https://api.example.com/data\"\n",
+    "params = {\n",
+    "    'api_key': api_key,\n",
+    "    'date_from': '2015-01-01',\n",
+    "    'date_to': '2024-01-01'\n",
+    "}\n",
+    "\n",
+    "# Make the API request\n",
+    "response = requests.get(api_url, params=params)\n",
+    "\n",
+    "# Check if the request was successful\n",
+    "if response.status_code == 200:\n",
+    "    data = response.json()\n",
+    "else:\n",
+    "    print(\"Failed to fetch data:\", response.status_code)\n",
+    "    data = {}\n",
+    "\n",
+    "# Assume the data includes 'remote_work_rate' and 'vacancy_rate' fields\n",
+    "# Convert data to a DataFrame (adjust the data extraction according to your data structure)\n",
+    "df = pd.DataFrame(data.get('items', []))\n"
    ]
   },
   {
